examples/test/testpolicy1819.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1819
  namespace: namespace311
spec:
  podSelector:
    matchLabels:
      key14: value31
      key5: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value1
          key18: value2
          key38: value30
      podSelector:
        matchLabels:
          key12: value32
          key47: value34
